# ai-world3

./: .gitignore  AI-World3-Analysis.md  LICENSE  README.md  pyproject.toml
src/ai_world3/: __init__.py  cli.py  model.py  scenarios.py  sensitivity.py  simulator.py  visualizer.py
src/ai_world3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_model.py  test_scenarios.py  test_simulator.py
