[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-world3"
version = "0.1.0"
description = "AI-World3: System dynamics simulation of AI automation vs social stability"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
ai-world3 = "ai_world3.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
